--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,9 +7,15 @@
 body {
     margin: 0;
     font-family: "Electrolize", sans-serif;
-    overflow: hidden;
 }
 
-.categories::-webkit-scrollbar {
-    display: none;
+
+@media (min-width :768px) {
+    body {
+        overflow: hidden;
+    }
+
+    .categories::-webkit-scrollbar {
+        display: none;
+    }
 }
