--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,9 @@ body {
     font-family: "Electrolize", sans-serif;
 }
 
+.ant-btn-primary {
+    background-color: #1677ff;
+}
 
 @media (min-width :768px) {
     body {
